# unicodeescape-api

./: CONTRIBUTING.md  README.md  openapi.yaml
android/: README.md  build.gradle
android/src/main/java/com/apiverve/client/: APIClient.java  APIResponse.java
android/src/main/java/com/apiverve/unicodeescape/: APIClient.java  APIException.java
android/src/main/java/com/apiverve/unicodeescape/data/: ResponseModels.java
examples/: README.md
examples/csharp/: basic.cs
examples/java/: basic.java
examples/javascript/: basic.js  error-handling.js
examples/python/: basic.py
go/: README.md  client.go  go.mod  types.go
npm/: README.md  index.d.ts  index.js  package.json
npm/examples/: basic.js
nuget/: Readme.md  ResponseObj.cs  UnicodeEscapeUnescapeAPIClient.cs  UnicodeEscapeUnescapeAPIClient.csproj  UnicodeEscapeUnescapeAPIClient.sln  UnicodeEscapeUnescapeQueryOptions.cs  apiMain.cs  apiVerveNuget.csproj  apiVerveNuget.sln
python/: README.md  pyproject.toml
python/src/my_api_wrapper/: __init__.py  apiClient.py  exceptions.py  setup.py  setup_dep.py
python/src/my_api_wrapper/tests/: test_api.py
python/tests/: test_api.py
